--- a/index.html
+++ b/index.html
@@ -12,28 +12,22 @@
   <div>
       <h1>Exercises</h1>
       <a href="exercise-charrette/DivyaDas_Buttons.html" target="blank">50 Charrettes</a><br>
-      <a href="" target="blank">Coding from Life</a><br>
-      <a href="" target="blank">:hover</a>
   </div>
   <div>
       <h1>Presentation</h1>
-      <a href="" target="blank">Pecha Kucha: Lorem Ipsum</a>
+      <a href="pres/silkroad.pdf" target="blank">The Dark Web: Silk Road</a>
   </div>
 
   <div>
       <h1>Projects</h1>
       <h2>Project 1: Republish a Text</h2>
       <a href="http://dasdivya.github.io/INT2/1/Code/cube.html" target="blank">Project 1</a><br>
-      <a href="" target="blank">Prototype 2: Lorem Ipsum</a><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+
       <h2>Project 2: CSS Typeface</h2>
-      <a href="" target="blank">Sketches</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <a href="2/typeface.html" target="blank">CSS Typeface</a><br>
+
       <h2>Project 3: Exhibition Microsite</h2>
-      <a href="" target="blank">Sketches</a><br>
-      <a href="" target="blank">Prototype: Lorem Ipsum</a><br>
-      <a href="" target="blank">Final: Lorem Ipsum</a>
+      <a href="3/final/vimai.html" target="blank">Vivian Maier</a><br>
   </div>
 </body>
 </html>
