--- a/index.html
+++ b/index.html
@@ -6,27 +6,44 @@
     <title>Divya Das</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
+
+    <style>
+
+    body{
+      background-color:snow;
+      margin:0;
+    }
+
+    a{
+      text-decoration: none;
+      color:black;
+      font-family: monospace;
+      font-size: 1vw;
+    }
+    </style>
+
+
 </head>
 
+
 <body>
-  <div>
+  <div class="ex">
       <h1>Exercises</h1>
       <a href="exercise-charrette/DivyaDas_Buttons.html" target="blank">50 Charrettes</a><br>
+      <a href="scandFlag.html" target="blank">Flag</a><br>
   </div>
-  <div>
+
+  <div class="pres">
       <h1>Presentation</h1>
       <a href="pres/silkroad.pdf" target="blank">The Dark Web: Silk Road</a>
   </div>
 
-  <div>
+  <div class="project">
       <h1>Projects</h1>
-      <h2>Project 1: Republish a Text</h2>
-      <a href="http://dasdivya.github.io/INT2/1/Code/cube.html" target="blank">Project 1</a><br>
+      <a href="http://dasdivya.github.io/INT2/1/Code/cube.html" target="blank">Resizing</a><br>
 
-      <h2>Project 2: CSS Typeface</h2>
       <a href="2/typeface.html" target="blank">CSS Typeface</a><br>
 
-      <h2>Project 3: Exhibition Microsite</h2>
       <a href="3/final/vimai.html" target="blank">Vivian Maier</a><br>
   </div>
 </body>
