--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="ex">
       <h1>Exercises</h1>
       <a href="exercise-charrette/DivyaDas_Buttons.html" target="blank">50 Charrettes</a><br>
-      <a href="scandFlag.html" target="blank">Flag</a><br>
+      <a href="pres/scandFlag.html" target="blank">Flag</a><br>
   </div>
 
   <div class="pres">
